fix man background overflow

--- a/source/stylesheets/home.css.scss
+++ b/source/stylesheets/home.css.scss
@@ -104,7 +104,7 @@ div.home {
     background-color: #E0E0E0;
     right: 2vw;
     top: 40px;
-
+    max-height: 770px;
     img.man {
       width: 100%;
       position: relative;
